(feat) Adicionando funcionalidade de redirecionar para pagina de qr code